--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta />
-    <title>Statego</title>
+    <title>Atego</title>
     <link rel="icon" type="image/png" href="/images/favicon.png" />
     <style>
       html,
