synchronizing figure movement

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     </style>
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./src/index.js"></script>
+    <script src="/src/index.js"></script>
     <!-- <script src="./src/field.js"></script> -->
 
   </head>
