--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       }
 
       canvas {
-        margin-bottom: 10px;
+        margin-bottom: 50px;
       }
 
       img,
@@ -40,8 +40,9 @@
   </head>
   <body>
     <body onload="init();">
+      <canvas id="villainCharacterCanvas" width="768" height="96"></canvas>
       <canvas id="gameCanvas" width="512" height="640"></canvas>
-      <canvas id="characterCanvas" width="768" height="96"></canvas>
+      <canvas id="heroCharacterCanvas" width="768" height="96"></canvas>
     </body>
   </body>
 </html>
