monkeytype theme & placement visualization

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        background-color: rgb(206, 233, 219); /* or replace with 'beige' */
+        background-color: rgb(35, 39, 46);
       }
 
       canvas {
-        margin-bottom: 50px;
+        margin-bottom: 40px;
       }
 
       img,
