--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         justify-content: center;
         align-items: center;
         background-color: rgb(35, 39, 46);
-        position: relative;
+        /* position: relative; */
       }
 
       canvas {
@@ -41,7 +41,7 @@
 
       .game-clock {
         position: absolute;
-        left: calc(768px / 2 - 5em);
+        left: calc(50% - 768px / 2 - 150px);
         font-family: Arial, Helvetica, sans-serif;
         padding: 15px;
         display: flex;
